--- a/Atomic/Atomic.csproj
+++ b/Atomic/Atomic.csproj
@@ -47,16 +47,20 @@
     <StartupObject>Atomic.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AppConstants.cs" />
     <Compile Include="Entities\Atom.cs" />
     <Compile Include="Entities\AtomsGrid.cs" />
-    <Compile Include="Colors.cs" />
-    <Compile Include="Contents.cs" />
+    <Compile Include="AppColors.cs" />
+    <Compile Include="AppContents.cs" />
     <Compile Include="Entities\GameSession.cs" />
     <Compile Include="Entities\GridAtom.cs" />
     <Compile Include="Entities\GridRenderer.cs" />
-    <Compile Include="GameApp.cs" />
+    <Compile Include="App.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screens\GameMenuScreen.cs" />
+    <Compile Include="Screens\GameScreen.cs" />
+    <Compile Include="Screens\StartMenuScreen.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework, Version=3.7.0.1708, Culture=neutral, processorArchitecture=MSIL">
@@ -102,7 +106,6 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.config" />
     <None Include="app.manifest" />
-    <None Include="Content\Default.spritefont" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
