--- a/Atomic/Atomic.csproj
+++ b/Atomic/Atomic.csproj
@@ -60,12 +60,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\GameMenuScreen.cs" />
     <Compile Include="Screens\GameScreen.cs" />
+    <Compile Include="Screens\SettingsScreen.cs" />
     <Compile Include="Screens\StartMenuScreen.cs" />
     <Compile Include="Services\BinSaveGameService.cs" />
     <Compile Include="Services\HighscoreService.cs" />
     <Compile Include="Services\IHighscoreService.cs" />
+    <Compile Include="Services\ISoundsManager.cs" />
     <Compile Include="Services\SaveGameData.cs" />
     <Compile Include="Services\SaveGameGridData.cs" />
+    <Compile Include="Services\SoundName.cs" />
+    <Compile Include="Services\SoundsManager.cs" />
     <Compile Include="Services\XmlSaveGameService.cs" />
     <Compile Include="Services\ISaveGameService.cs" />
     <Compile Include="UI\TextMenu.cs" />
