--- a/Atomic/Atomic.csproj
+++ b/Atomic/Atomic.csproj
@@ -59,7 +59,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\GameMenuScreen.cs" />
+    <Compile Include="Screens\GameOverScreen.cs" />
     <Compile Include="Screens\GameScreen.cs" />
+    <Compile Include="Screens\HighscoreScreen.cs" />
     <Compile Include="Screens\SettingsScreen.cs" />
     <Compile Include="Screens\StartMenuScreen.cs" />
     <Compile Include="Services\SaveGames\BinSaveGameService.cs" />
