--- a/Atomic/Atomic.csproj
+++ b/Atomic/Atomic.csproj
@@ -64,8 +64,9 @@
     <Compile Include="Screens\HighscoreScreen.cs" />
     <Compile Include="Screens\SettingsScreen.cs" />
     <Compile Include="Screens\StartMenuScreen.cs" />
+    <Compile Include="Services\Highscore\Highscore.cs" />
     <Compile Include="Services\SaveGames\BinSaveGameService.cs" />
-    <Compile Include="Services\Highscore\HighscoreService.cs" />
+    <Compile Include="Services\Highscore\XmlHighscoreService.cs" />
     <Compile Include="Services\Highscore\IHighscoreService.cs" />
     <Compile Include="Services\Sounds\ISoundsManager.cs" />
     <Compile Include="Services\SaveGames\SaveGameData.cs" />
