--- a/Atomic/packages.config
+++ b/Atomic/packages.config
@@ -1,14 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MonoGame.Framework.WindowsDX" version="3.7.0.1708" targetFramework="net45" />
+  <package id="MonoGame.Framework.Content.Pipeline.Portable" version="3.7.0.1708" targetFramework="net461" />
+  <package id="MonoGame.Framework.Portable" version="3.7.0.1708" targetFramework="net461" />
+  <package id="MonoGame.Framework.WindowsDX" version="3.7.0.1708" targetFramework="net461" />
+  <package id="PureFreak.Collections" version="1.0.11" targetFramework="net461" />
   <package id="PureFreak.DependencyInjection" version="1.0.0" targetFramework="net461" />
-  <package id="SharpDX" version="4.0.1" targetFramework="net45" />
-  <package id="SharpDX.Direct2D1" version="4.0.1" targetFramework="net45" />
-  <package id="SharpDX.Direct3D11" version="4.0.1" targetFramework="net45" />
-  <package id="SharpDX.Direct3D9" version="4.0.1" targetFramework="net45" />
-  <package id="SharpDX.DXGI" version="4.0.1" targetFramework="net45" />
-  <package id="SharpDX.Mathematics" version="4.0.1" targetFramework="net45" />
-  <package id="SharpDX.MediaFoundation" version="4.0.1" targetFramework="net45" />
-  <package id="SharpDX.XAudio2" version="4.0.1" targetFramework="net45" />
-  <package id="SharpDX.XInput" version="4.0.1" targetFramework="net45" />
+  <package id="PureFreak.TileMore" version="1.0.4" targetFramework="net461" />
+  <package id="PureFreak.TileMore.Content" version="1.0.2" targetFramework="net461" />
+  <package id="SharpDX" version="4.0.1" targetFramework="net461" />
+  <package id="SharpDX.Direct2D1" version="4.0.1" targetFramework="net461" />
+  <package id="SharpDX.Direct3D11" version="4.0.1" targetFramework="net461" />
+  <package id="SharpDX.Direct3D9" version="4.0.1" targetFramework="net461" />
+  <package id="SharpDX.DXGI" version="4.0.1" targetFramework="net461" />
+  <package id="SharpDX.Mathematics" version="4.0.1" targetFramework="net461" />
+  <package id="SharpDX.MediaFoundation" version="4.0.1" targetFramework="net461" />
+  <package id="SharpDX.XAudio2" version="4.0.1" targetFramework="net461" />
+  <package id="SharpDX.XInput" version="4.0.1" targetFramework="net461" />
 </packages>
